# klf-manual-analyser

./: .gitignore  Makefile  README.md  pyproject.toml
LICENSES/: MIT.txt  agpi-3.0.txt  bsd-3.txt  qen.txt
config/: criteria_1920s_1930s.toml  criteria_1988.toml  criteria_contemporary.toml
docs/: 1988-candidates.md  CRITERIA.md  DATA_MODELS.md  DESIGN.md  ERROR_HANDLING.md  TODO.md  backlog.md  contemporary-candidates.md  fedora-setup.md  fixture-candidates.md  modularisation-guide.md  the-manual.txt
klf-mir-dev/: SKILL.md
klf-mir-dev/references/: architecture.md  compatibility.md  criteria.md  schema.md
scripts/: get-fixtures.sh  verify_libs.py
src/manual_analyser/: __init__.py  db.py  utils.py
src/manual_analyser/aggregation/: aggregate.py  clusters.py  queries.py  recipe.py  types.py
src/manual_analyser/analysis/: energy.py  groove.py  harmony.py  normalise.py  rhythm.py  structure.py  tempo.py
src/manual_analyser/analysis/energy/: __init__.py  features.py  types.py  writer.py
src/manual_analyser/analysis/groove/: __init__.py  danceability.py  regularity.py
src/manual_analyser/analysis/harmony/: __init__.py  chords.py  keys.py  sections.py  types.py
src/manual_analyser/analysis/structure/: __init__.py  alignment.py  boundaries.py  labelling.py  types.py
src/manual_analyser/audio/: decode.py  device.py  separate.py
src/manual_analyser/cli/: __init__.py  clean.py  logging_setup.py  output.py
src/manual_analyser/db/: __init__.py  connection.py  helpers.py  schema.py
src/manual_analyser/embedding/: __init__.py  constants.py  db_reader.py  db_writer.py  ollama_embed.py  payload.py  qdrant_client.py  summarise.py  types.py
src/manual_analyser/pipeline/: __init__.py  analysis_runner.py  cache.py  scoring_runner.py  types.py
src/manual_analyser/report/: base.html  queries.py  render.py  server.py  types.py
src/manual_analyser/scoring/: criteria.py  evaluator.py  fetch.py  loader.py  prompt.py  types.py
src/manual_analyser/transcription/: hooks.py  types.py  whisper.py
tests/: test_utils.py
tests/aggregation/: test_aggregate.py
tests/analysis/: test_energy.py  test_groove.py  test_harmony.py  test_normailse.py  test_rhythm.py  test_structure.py  test_tempo.py
tests/audio/: test_decode.py  test_separate.py
tests/cli/: test_cli.py
tests/embedding/: test_embed.py  test_summarise.py
tests/fixtures/: SOURCES.md
tests/pipeline/: test_cache.py  test_pipeline.py
tests/scoring/: test_criteria.py  test_prompt.py
tests/scoring/llm/: test_llm.py  test_ollama_client.py  test_response_parser.py
tests/transcription/: test_whisper.py
(+8 files in other folders)
